Finished Rachel's comments

--- a/thesis/ack.tex
+++ b/thesis/ack.tex
@@ -1,6 +1,6 @@
 %!tex root=./thesis.tex
-\chapter*{Acknowledgments}
-\addcontentsline{toc}{chapter}{Acknowledgments}
+\chapter*{Acknowledgements}
+\addcontentsline{toc}{chapter}{Acknowledgements}
 
 I could not have completed this thesis without my incredible supervisors: Naomi McClure-Griffiths, who stepped into my panel when circumstances required it and made me feel just as welcome in her group as any student who had been there from the beginning; Ivy Wong, who was always available to help answer my many inane questions on the depths of radio astronomy; Julie Banfield, who helped me learn the ropes of astronomy and pointed out all of the important websites to me; and Cheng Soon Ong, who advised when I needed advising, pushed when I needed pushing, and was always there when I needed support.
 
@@ -8,7 +8,7 @@ Much of this work was done in my office at Mount Stromlo while I bothered my off
 
 Chapters 4 and 5 rely heavily on results from the Radio Galaxy Zoo citizen science project. I would like to thank all 10~000+ volunteers who contributed to the project, as well as the members of the Radio Galaxy Zoo collaboration, notably Stas Shabala, Larry Rudnick, Heinz Andernach, Avery Garon, Anna Kapinska, and Ray Norris, all of whom contributed to discussion of my work for these chapters. I must also thank those who provided me funding over this PhD: the Australian Government, the Research School of Astronomy and Astrophysics, Data61/CSIRO, and the Astronomical Society of Australia.
 
-A special thank you to those who proof-read this thesis: Rachel Alger, Jakub Nabaglo, Henry Zovaro, Jack Livingston, Sarah Lawson, Eloise Birchall, and Adam Rains.
+A special thank you to those who proof-read this thesis: Jakub Nabaglo, Henry Zovaro, Jack Livingston, Sarah Lawson, Eloise Birchall, Adam Rains, and especially Rachel Alger.
 
 Finally, I would like to thank my family, Rachel, Geoff, and Kelly Alger; as well as my partner Sarah Lawson; and my friends Nicholas Hogan, Mitchell Busby, Bronnagh Norris, and Jakub Nabaglo; for their emotional support through my PhD.
 
