Wrapping up comments

--- a/thesis/rlfs.tex
+++ b/thesis/rlfs.tex
@@ -228,7 +228,7 @@ host'.
       \label{eq:luminosity}
       L = \frac{4\pi f d^2}{1+z}{(1+z)^{-\alpha}}
   \end{equation}
-  where $z$ is redshift and $d$ is luminosity distance (a function of $z$).
+  where $z$ is redshift and $d$ is luminosity distance (a function of $z$). The average $k$-correction was $0.92$.
   Uncertainties in comoving density were estimated as described in \aref{sec:rlfs-rlf-desc}. Completeness estimates are shown in \aref{sec:rlfs-completeness}. We discuss biases in our methods and results in \autoref{sec:rlfs-bias}.
 
   We compared our RLFs with \citet{mauch07rlf}, who estimated RLFs from 7~824
