--- a/thesis/thesis_diff.tex
+++ b/thesis/thesis_diff.tex
@@ -32,6 +32,7 @@
 \usepackage{graphicx}
 \usepackage{thesis}
 \usepackage{longtable}
+
 \usepackage{lineno}
 \linenumbers
 \usepackage{draftwatermark}
@@ -3419,8 +3420,8 @@ host'.
       \label{eq:luminosity}
       L = \frac{4\pi f d^2}{1+z}{(1+z)^{-\alpha}}
   \end{equation}
-  where $z$ is redshift and $d$ is luminosity distance (a function of $z$).
-  Uncertainties in comoving density \DIFdelbegin \DIFdel{are }\DIFdelend \DIFaddbegin \DIFadd{were }\DIFaddend estimated as described in \DIFdelbegin %DIFDELCMD < \autoref{sec:rlfs-rlf-desc}%%%
+  where $z$ is redshift and $d$ is luminosity distance (a function of $z$). \DIFaddbegin \DIFadd{The average $k$-correction was $0.92$.
+  }\DIFaddend Uncertainties in comoving density \DIFdelbegin \DIFdel{are }\DIFdelend \DIFaddbegin \DIFadd{were }\DIFaddend estimated as described in \DIFdelbegin %DIFDELCMD < \autoref{sec:rlfs-rlf-desc}%%%
 \DIFdelend \DIFaddbegin \aref{sec:rlfs-rlf-desc}\DIFaddend . Completeness estimates are shown in \DIFdelbegin %DIFDELCMD < \autoref{sec:rlfs-completeness}%%%
 \DIFdelend \DIFaddbegin \aref{sec:rlfs-completeness}\DIFaddend . We discuss biases in our methods and results in \autoref{sec:rlfs-bias}.
 
